--- a/gui/web/src/components/molecules/PriceFeedSelector/PriceFeedSelector.module.scss
+++ b/gui/web/src/components/molecules/PriceFeedSelector/PriceFeedSelector.module.scss
@@ -3,7 +3,7 @@
 .wrapper {
     display: flex;
     flex-direction: row;
-    width: 100%;
+    width: 80%;
 
     > * {
         flex-grow: 1;
